compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_external_for_same_project_erlang.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 431
expression: "\n@external(erlang, \"one\", \"two\")\n@external(erlang, \"three\", \"four\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @external(erlang, "three", "four")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.

